# AutoScrollMusicSheet

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  TFLiteEngineJNI.cpp  main.cpp
app/src/main/cpp/tf-lite-api/tensorflow_src/tensorflow/lite/core/api/: op_resolver.cc
app/src/main/java/com/autoscrollmusicsheet/: AudioTextMatcher.kt  MainActivity.java  MainActivity.kt
app/src/main/java/com/autoscrollmusicsheet/asr/: ASRLayer.kt  ASRListener.kt  ASRManager.kt  IRecorderListener.java  IWhisperListener.java  IWhisperListener.kt  Recorder.java  VoskLayer.kt  Whisper.java  WhisperLayer.kt
app/src/main/java/com/autoscrollmusicsheet/debug/: ModelDebugger.java
app/src/main/java/com/autoscrollmusicsheet/engine/: IWhisperEngine.java  WhisperEngine.java  WhisperEngineNative.java
app/src/main/java/com/autoscrollmusicsheet/utils/: WaveUtil.java  WhisperUtil.java
app/src/main/java/com/whispertflite/: MainActivity.java
app/src/main/java/com/whispertflite/debug/: ModelDebugger.java
app/src/main/java/com/whispertflite/engine/: WhisperEngine.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
